# QMCSoftware

./: #makefile#  .coveragerc  .dockerignore  .editorconfig  .gitattributes  .gitignore  .pdm-python  .readthedocs.yaml  .travis.yml  404.html  AsianCallFun.m  CLTStopping.m  CONTRIBUTING.md  Discrepancy.ipynb  Dockerfile  FJHNotes.md  IIDDistribution.m  IntegrationExample.m  KeisterFun.m  LICENSE  LR.py  LR1.py  LatexConverter.rtf  MANIFEST.in  MIGRATE_qmcpy_before_mcqmc_report.md  MIGRATE_qmcpy_checklist.md  MIGRATE_qmcpy_inventory.md  Master_Discrepancy.ipynb  QMCPy_Shared_Leadership.md  QMCSoftware2018June28.tex  README.md  RELEASE.md  RISE Example.ipynb  Untitled.ipynb  Untitled1.ipynb  VSCODE_SETUP.MD  __init__.py  acceptance_rejection.py  acceptance_rejection_qmcpy.ipynb  accumData.m  (+49 more)
.devcontainer/: devcontainer.json
.github/: dependabot.yml  pull_request_template.md
.ipynb_checkpoints/: Claude_test-checkpoint.py
CONTRIBUTING/: index.html
MATLAB_Prototype/: AsianCallFun.m  CLTStopping.m  IIDDistribution.m  IntegrationEx.txt  IntegrationExample.m  KeisterFun.m  LowDiscTestsOnMatlab.m  accumData.m  discreteDistribution.m  dt_CLTStopping.m  dt_qmc.m  fun.m  integrate.m  integration.m  meanVarData.m
Presentations+Papers/: QMCSoftware2018June28.tex
Python_Prototype/: AbsTol_RunTime_Test.py  Abstract_Practice.py  AsianCallFun.py  CLT.py  CLTStopping.py  CLT_Rep.py  CompVarStopping.py  Dirks_Random_Generator.py  Discrete_Distribution.py  Driver_QMC.py  Function.py  IID.py  IIDDistribution.py  IntegrationExample.py  Keister.py  KeisterFun.py  Lattice.py  LinearFun.py  MATLAB_IE_Output.txt  Mesh.py  Point_Distribution_Test.py  QMC.py  README.html  README.md  README.txt  SimpleFun.py  Test_3D_Point_Distribution.py  Test_AbsTol_RunTime.py  Test_QMC.py  accumData.py  addpath.py  digitalsequence_b2g.py  discreteDistribution.py  dt_CLTStopping.py  dt_KeisterFun.py  dt_qmc.py  fun.py  integrate.py  latticeseq_b2.py  meanVar.py  (+11 more)
RELEASE/: index.html
booktests/: index.html
community/: index.html
components/: index.html
conda.recipe/: README.md  meta.yaml
data/: qmc-software.yml  redirects.yml
demos/: #test_quickstart_notebook.py#  .gitignore  Aiwen_KDE_Experiment.ipynb  Asian_Fixed_ML.ipynb  BrownianBridgeDemo.ipynb  Connecting FEniCS and QMCPy Demo.ipynb  Correction_of_Scipy_Discrepancy.ipynb  CubMCCLTVec.py  Density estimator.ipynb  Discrepancy.ipynb  DiscrepancyWithNotes.ipynb  EmpiricalCharacteristicFunction.ipynb  Fang.ipynb  Fixed_multilevel.ipynb  KDE_Examples.ipynb  KDE_ExamplesOLD.ipynb  KDE_Experiment.ipynb  KDPricingOptions.ipynb  KDPricingOptions_Revised.ipynb  Kro.ipynb  Kronecker.ipynb  Kronecker2.ipynb  MC_vs_QMC.ipynb  MWE_plot_proj.ipynb  MWEsympyproblem.ipynb  MedianofMeansKunsch.ipynb  NonUniformSampler_MWE.ipynb  Parsl.ipynb  Playground.ipynb  Presentation--2022-06-02.ipynb  PricingAsianOptions.ipynb  Purdue Talk Figures.ipynb  Purdue_Talk_Figures.ipynb  PythonExamples.ipynb  PythonMarkdownExamples.ipynb  SURE2024SpeedySimulationsKickoff-2024-05-28.ipynb  SURE_Kronecker_Tutorial.ipynb  TemplateNotebook.ipynb  TestAsianOption.ipynb  TestColabBootstrapAndBadge.ipynb  (+104 more)
demos_to_be_updated/: PricingAsianOptions.ipynb  control_variates.ipynb  elliptic-pde.ipynb  gaussian_diagnostics.py  integration_examples.ipynb  lattice_random_generator.ipynb  nei_demo.ipynb  prob_failure_gp_ci.ipynb  qmcpy_intro.ipynb  quickstart.ipynb  vectorized_qmc.ipynb
deprecated/: .travis.yml
docs/: .buildinfo  .gitignore  QMCPy_Shared_Leadership.md  README.md  RELEASE.md  _config.yml  accelerating_qmcpy_notebook_tests_with_parsl.md  ai-assisted-contributions.md  algorithms.html  api.md  booktests.md  ci-testing.md  citation.md  components.md  demos.html  discrete_distributions.md  fast_transforms.md  front_matter.html  genindex.html  good_practices.md  index.html  index.md  integrands.md  kernels.md  license.html  mpmc-compatibility.md  objects.inv  publications.md  py-modindex.html  qmc-software.md  readme.html  requirements.txt  requirements_no_pytorch.txt  search.html  searchindex.js  select_references.md  sponsors.md  stopping_criteria.md  tests.md  true_measures.md  (+1 more)
docs_bak/: _config.yml
html_from_readme/: QMCSoftware.html  python_prototype.html  qmcpy.html  test.html
opencl_qmc_generators/: LatticeOpenCL.ipynb
paper/: .gitignore  FJH25.bib  FJHown25.bib  Makefile  README.md  all.bib  choi2025.bib  include-code-files.lua  index.html  joss-simple.csl  main.bib  main.bib.original  main.md  main.tex  other.bib  paper.bib  paper.md  refs_all.bib  template.latex  tmp.md
presentations_papers/: FJHown23.bib
profile/: asian_option_multi_level.prof  asian_option_multi_level.py.prof  asian_option_single_level.py.prof  doctest.prof  european_option.py.prof  fasttest.prof  importance_sampling.py.prof  integrations_asian_call.py.prof  integrations_keister.py.prof  keister.py.prof  longtest.prof  mcqmc06.py.prof  mlmc_test.py.prof  pi_problem.py.prof  python_sequences.py.prof  test.profile  vary_abs_tol.py.prof  vary_dimension.py.prof
python_prototype/: LICENSE  MANIFEST.in  README.md  ToDo  build.sh  makefile  pytorch_sobol.py  requirements.txt  requirements_no_torch.txt  requirements_python3.7.5.txt  requirements_python3.8.txt  setup.py
qmcpy/: QMCpy.code-workspace  README.md  __init__.py  plot_functions.py  qmcpy.mplstyle  requirements.txt  setup.py
requirements/: README.md  dev.txt  dev39.txt  dev_docs.txt  environment.yml  environment_mac_m1_python_3_9_7.yml
scripts/: check_colab_notebooks.py  check_links.py  check_math_delimiters.py  cleanup_invalid_dist.py  colab_notebooks_manifest.json  combine_coverage.py  compute_pytest_workers.py  execute_notebook.py  execute_notebooks_from_branch.py  find_local_only_folders.sh  fix_common_md_typos.py  fix_single_dollar_math.py  harden_colab_notebook.py  install_mpmc_pyg.py  make_qmc_software_page.py  make_redirect_pages.py  pypi_stats.py  pytest_xdist.py  qmc_software_table.py  render_paper_for_mkdocs.sh  report_colab_notebook_patterns.py  smoke_test_colab_notebooks.py  unwrap_markdown.py  update_pep8_badge.py
(+2045 files in other folders)
