# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
# brew install pdm
# https://pdm-project.org/latest/usage/publish/
# pdm publish --repository testpypi
# pdm publish 

[build-system]
requires = ["pdm-backend","setuptools","wheel"]
build-backend = "pdm.backend"

[project.urls]
Documentation = "https://qmcsoftware.github.io/QMCSoftware/"
Repository = "https://github.com/QMCSoftware/QMCSoftware"
Issues = "https://github.com/QMCSoftware/QMCSoftware/issues"

[project]
name = "qmcpy"
description = "Quasi-Monte Carlo point generators, automatic transformations, and adaptive stopping criteria"
authors = [
    {name="Aleksei G Sorokin"},
    {name="Fred Hickernell"},
    {name="Sou-Cheng T. Choi"},
    {name="Jagadeeswaran Rathinavel"},
    {name="Mike McCourt"},
    ]
classifiers= [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3", 
    "Topic :: Scientific/Engineering :: Mathematics", 
    ]
readme = "README.md"
keywords=[
    "quasi",
    "monte",
    "carlo",
    "community",
    "software",
    "cubature",
    "numerical",
    "integration",
    "discrepancy",
    "sobol",
    "lattice",
    ]
license = "Apache-2.0"
dynamic = ["version"]
requires-python = ">= 3.5"
dependencies = [
    "numpy >= 1.17.0",
    "scipy >= 1.1.0",
    "qmctoolscl >= 1.1.5",
    ]

[project.optional-dependencies]
torch = [
    "torch >= 2.7.0",
    ]
gpytorch = [
    "gpytorch >= 1.7.0",
    ]
botorch = [
    "botorch >= 0.10.0",
    ]
umbridge = [
    "umbridge >= 1.2.1",
    ]
test = [
    "pytest == 8.3.5",
    "pytest-cov == 6.1.1",
    "phmutest == 1.0.1",
    "pytest-accept == 0.1.10",
    "testbook == 0.4.2",
    "psutil == 5.9.5",
    "parsl == 2025.7.28",
    "seaborn == 0.8",
    "scikit-learn >= 1.0.0",
    "scikit-optimize",
    "ipykernel",
    "matplotlib >= 3.9.0",
    ]
test_torch = [
    "torch >= 2.7.0",
    ]
test_gpytorch = [
    "gpytorch == 1.11",
    ]
test_botorch = [
    "botorch == 0.10.0",
    ]
test_umbridge = [
    "umbridge == 1.2.4",
    ]
docs = [
    "nbval >= 0.10.0",
    "mkdocs >= 1.5.0",
    "mkdocs-material >= 9.6.12",
    "mkdocs-jupyter >= 0.25.0",
    "mkdocstrings-python >= 1.16.0",
    "mkdocs-with-pdf >= 0.9.3",
    "mkdocs-glightbox >= 0.4.0",
    "graphviz >= 0.20.0",
    "phmutest >= 1.0.1",
    "mkpdfs-mkdocs >= 1.0.1",
    "mkdocs-print-site-plugin >= 2.7.2",
    "mkdocs-exclude >= 1.0.2",
    "pylint >= 2.14.4",
]
dev = [ # brew install weasyprint
    "qmcpy[docs,test,test_gpytorch,test_botorch,test_umbridge]",
    "jupyterlab >= 4.0.0",
    "matplotlib >= 3.9.0",
    "tueplots >= 0.2.0",
    "pandas >= 2.0.0",
    "scikit-learn >= 1.0.0",
    "scikit-optimize >= 0.10.2",
]

class = [
    "jupyterlab >= 4.0.0",
    "matplotlib >= 3.9.0",
    "seaborn >= 0.13.0",
    "tueplots >= 0.2.0",
    "pandas >= 2.0.0",
    "scikit-learn >= 1.0.0",
    "scikit-optimize >= 0.10.2",
    "ipynbname >= 2023.2.0.0",
    "jupyterlab_execute_time >= 3.1.2",
    "ipywidgets >= 8.1.0",
    "statsmodels >= 0.14.3",
    "tqdm >= 4.66.0",
    "sympy >= 1.12",
    "arviz >= 0.17",
    "plotly >= 5.0",
    "networkx >= 3.0",
]

[tool.pdm.build]
run-setuptools = true
includes = [
    "qmcpy",
    "qmcpy/discrete_distribution/_c_lib/*.h",
    "qmcpy/discrete_distribution/_c_lib/*.c",
    "qmcpy/discrete_distribution/digital_net_b2/generating_matrices/*.npy",
    "qmcpy/discrete_distribution/lattice/generating_vectors/*.npy",
    "qmcpy/util/qmcpy.mplstyle",
    ]
excludes = []

[tool.pdm.version]
source = "file"
path = "qmcpy/__init__.py"
